2024-01-15T08:20:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7526112792 # 25
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: last 14d: unq all: 6 2772
* notice: prev accum: outdated-unq outdated-all / unq all: 1869 180145 / 1893 182825
* notice: next accum: outdated-unq outdated-all / unq all: 1869 180145 / 1894 182936
* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -0 -16 / +1 +111 -0 -0 / 1 111
* notice: removed / changed dates: [] / [2024-01-01 2024-01-15]

2024-01-15T01:12:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7523014615 # 24
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: last 14d: unq all: 6 2677
* notice: prev accum: outdated-unq outdated-all / unq all: 1868 180020 / 1893 182730
* notice: next accum: outdated-unq outdated-all / unq all: 1869 180145 / 1893 182825
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -3 / +1 +298 -0 -0 / 1 298
* notice: removed / changed dates: [2023-12-31] / [2024-01-01 2024-01-14]

2024-01-14T16:18:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7520349958 # 23
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 6 2605
* notice: prev accum: outdated-unq outdated-all / unq all: 1868 180020 / 1893 182638
* notice: next accum: outdated-unq outdated-all / unq all: 1868 180020 / 1893 182730
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -41 / +1 +203 -0 -0 / 1 203
* notice: removed / changed dates: [] / [2023-12-31 2024-01-14]

2024-01-14T08:17:55Z: