@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-15T08:20:44Z",
+  "timestamp" : "2024-01-15T16:19:56Z",
   "count_outdated" : 180145,
   "uniques_outdated" : 1869,
-  "count" : 182936,
+  "count" : 183028,
   "uniques" : 1894,
   "clones" : [
     {
       "timestamp": "2024-01-01T00:00:00Z",
-      "count": 33,
-      "count_minmax": [ 33, 52 ],
-      "count_decinc": [ 19, 52 ],
+      "count": 16,
+      "count_minmax": [ 16, 52 ],
+      "count_decinc": [ 36, 52 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-01-15T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 203,
+      "count_minmax": [ 111, 203 ],
+      "count_decinc": [ 0, 203 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
