@@ -1,3 +1,12 @@
+2024-01-15T16:19:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7531550343 # 26
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
+* notice: last 14d: unq all: 6 2847
+* notice: prev accum: outdated-unq outdated-all / unq all: 1869 180145 / 1894 182936
+* notice: next accum: outdated-unq outdated-all / unq all: 1869 180145 / 1894 183028
+* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -17 / +1 +203 -0 -0 / 1 203
+* notice: removed / changed dates: [] / [2024-01-01 2024-01-15]
+
 2024-01-15T08:20:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7526112792 # 25
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
